# capstone

./: .env  .gitignore  Data Analytics Capstone Release Form.docx  OpenAI-response-research.ipynb  Peter Krupa Data Analytics Capstone Topic Approval Form.docx  README.md  Untitled.ipynb  capstone_analysis.ipynb  capstone_presentation.ipynb  database.py  demo.txt  json_schema.txt  llm_client.py  llm_tools.py  main.py  notes.txt  patient_record.schema.json  patient_record.yaml  patient_record_a.yaml  patient_record_b.yaml  pdf_text.txt  pyproject.toml  sample_medical_record.txt  settings.py  setup_parser.py  validation.py
.ipynb_checkpoints/: OpenAI-response-research-checkpoint.ipynb  capstone_analysis-checkpoint.ipynb  capstone_presentation-checkpoint.ipynb
analysis/: functions.py  visualizations.py
